# libstrvar

./: Makefile.am  README.md  autogen.sh  configure.ac.sh
debian/: create-deb-arch.sh  pkgconfig.pc.sh
debian/arch/all/DEBIAN/: changelog.sh  control.sh
doc/: Doxyfile  doxygen.h  index.html
man/: Makefile.am  libstrvar.1
src/: Makefile.am  example_simple.c  main.c  main.h  strcalc.c  strcalc.h  strhash.c  strhash.h  strjson.c  strjson.h  strllist.c  strllist.h  strslist.c  strslist.h  strvar.c  strvar.h  strxml.c  strxml.h  test_invalid1.xml  test_invalid2.xml  test_invalid3.xml  test_ok.xml  test_var_json.c  test_var_lh.c  test_var_xml.c  x.c  x.h
